changed isolatin1 package to inputenc package git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@6093 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/pretty/width-table.tex.templ
+++ b/pretty/width-table.tex.templ
@@ -2,7 +2,7 @@
 
 <set-font>
 
-\usepackage{isolatin1}
+\usepackage[latin1]{inputenc}
 \usepackage{german}
 \usepackage{calc}
 \usepackage{longtable}
